refazendo tudo contando os espacos

--- a/T2 - Analise Sintatica/Makefile
+++ b/T2 - Analise Sintatica/Makefile
@@ -9,6 +9,7 @@ main: clean lex.yy.c
 	$(CC) -o analisador node.o lex.yy.o compilador.tab.o main.c 
 
 lex.yy.c: analisador.l tokens.h
+	clear
 	bison -d compilador.y
 	flex analisador.l
 
