--- a/T2 - Analise Sintatica/Makefile
+++ b/T2 - Analise Sintatica/Makefile
@@ -6,7 +6,7 @@ all: main
 main: clean lex.yy.c 
 	$(CC) -c node.c
 	$(CC) -c lex.yy.c compilador.tab.c
-	$(CC) -o analisador node.o lex.yy.o compilador.tab.o main.c 
+	$(CC) -o compilador node.o lex.yy.o compilador.tab.o main.c 
 
 lex.yy.c: analisador.l tokens.h
 	clear
